// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataItem renders with all props set 1`] = `
<DocumentFragment>
  <div
    data-test-id="data-result-item"
  >
    <div
      class="__ContentBox__ h-100"
    >
      <div
        class="ant-card ant-card-bordered h-100"
      >
        <div
          class="ant-card-body"
        >
          <div
            class="pa2"
          >
            <div>
              <div
                data-test-id="data-result-item-inner"
              >
                <div
                  class="flex flex-nowrap"
                >
                  <div
                    class="flex-grow-1"
                  >
                    <a
                      class="result-item-title"
                      data-test-id="data-result-title-link"
                      href="/data/1234"
                    >
                      <span
                        data-test-id="literature-detail-title"
                      >
                        <span
                          class="__Latex__"
                        >
                          Test title
                        </span>
                        <span>
                          <span>
                             : 
                          </span>
                          <span
                            class="__Latex__"
                          >
                            voluptate eiusmod fugiat
                          </span>
                        </span>
                      </span>
                    </a>
                  </div>
                </div>
                <div
                  class="mt1"
                >
                  <div
                    class="__InlineList__ di"
                  >
                    <ul>
                      <li>
                        <div
                          class="di"
                        >
                          <span />
                          <span
                            class="pl1 secondary-color"
                          >
                            (
                            <div
                              class="__InlineList__ di"
                            >
                              <ul>
                                <li>
                                  <a
                                    href="/institutions/12346"
                                  >
                                    ut
                                  </a>
                                </li>
                              </ul>
                            </div>
                            )
                          </span>
                        </div>
                      </li>
                    </ul>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="ant-row ant-row-space-between actions ph2"
          >
            <div
              class="ant-col"
            >
              <span
                class="__UserAction__"
              >
                <a
                  href="http://url.com"
                  target="_blank"
                >
                  <span
                    class="__IconText__"
                  >
                    <span
                      class="icon"
                    >
                      <span
                        aria-label="link"
                        class="anticon anticon-link"
                        role="img"
                      >
                        <svg
                          aria-hidden="true"
                          data-icon="link"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M574 665.4a8.03 8.03 0 00-11.3 0L446.5 781.6c-53.8 53.8-144.6 59.5-204 0-59.5-59.5-53.8-150.2 0-204l116.2-116.2c3.1-3.1 3.1-8.2 0-11.3l-39.8-39.8a8.03 8.03 0 00-11.3 0L191.4 526.5c-84.6 84.6-84.6 221.5 0 306s221.5 84.6 306 0l116.2-116.2c3.1-3.1 3.1-8.2 0-11.3L574 665.4zm258.6-474c-84.6-84.6-221.5-84.6-306 0L410.3 307.6a8.03 8.03 0 000 11.3l39.7 39.7c3.1 3.1 8.2 3.1 11.3 0l116.2-116.2c53.8-53.8 144.6-59.5 204 0 59.5 59.5 53.8 150.2 0 204L665.3 562.6a8.03 8.03 0 000 11.3l39.8 39.8c3.1 3.1 8.2 3.1 11.3 0l116.2-116.2c84.5-84.6 84.5-221.5 0-306.1zM610.1 372.3a8.03 8.03 0 00-11.3 0L372.3 598.7a8.03 8.03 0 000 11.3l39.6 39.6c3.1 3.1 8.2 3.1 11.3 0l226.4-226.4c3.1-3.1 3.1-8.2 0-11.3l-39.5-39.6z"
                          />
                        </svg>
                      </span>
                    </span>
                    <span
                      class="v-top"
                    >
                      links
                    </span>
                  </span>
                </a>
              </span>
              <span
                class="__UserAction__"
              >
                <a
                  href="//doi.org/10.8756/tTM"
                  target="_blank"
                >
                  <span
                    class="__IconText__"
                  >
                    <span
                      class="icon"
                    >
                      <span
                        aria-label="link"
                        class="anticon anticon-link"
                        role="img"
                      >
                        <svg
                          aria-hidden="true"
                          data-icon="link"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M574 665.4a8.03 8.03 0 00-11.3 0L446.5 781.6c-53.8 53.8-144.6 59.5-204 0-59.5-59.5-53.8-150.2 0-204l116.2-116.2c3.1-3.1 3.1-8.2 0-11.3l-39.8-39.8a8.03 8.03 0 00-11.3 0L191.4 526.5c-84.6 84.6-84.6 221.5 0 306s221.5 84.6 306 0l116.2-116.2c3.1-3.1 3.1-8.2 0-11.3L574 665.4zm258.6-474c-84.6-84.6-221.5-84.6-306 0L410.3 307.6a8.03 8.03 0 000 11.3l39.7 39.7c3.1 3.1 8.2 3.1 11.3 0l116.2-116.2c53.8-53.8 144.6-59.5 204 0 59.5 59.5 53.8 150.2 0 204L665.3 562.6a8.03 8.03 0 000 11.3l39.8 39.8c3.1 3.1 8.2 3.1 11.3 0l116.2-116.2c84.5-84.6 84.5-221.5 0-306.1zM610.1 372.3a8.03 8.03 0 00-11.3 0L372.3 598.7a8.03 8.03 0 000 11.3l39.6 39.6c3.1 3.1 8.2 3.1 11.3 0l226.4-226.4c3.1-3.1 3.1-8.2 0-11.3l-39.5-39.6z"
                          />
                        </svg>
                      </span>
                    </span>
                    <span
                      class="v-top"
                    >
                      DOI
                    </span>
                  </span>
                </a>
              </span>
            </div>
            <div
              class="ant-col"
            >
              <span
                class="__UserAction__"
              >
                <a
                  href="/literature?q=data.record.$ref:1234"
                >
                  <span
                    class="__IconText__"
                  >
                    <span
                      class="icon"
                    >
                      <span
                        aria-label="login"
                        class="anticon anticon-login"
                        role="img"
                      >
                        <svg
                          aria-hidden="true"
                          data-icon="login"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <defs>
                            <style />
                          </defs>
                          <path
                            d="M521.7 82c-152.5-.4-286.7 78.5-363.4 197.7-3.4 5.3.4 12.3 6.7 12.3h70.3c4.8 0 9.3-2.1 12.3-5.8 7-8.5 14.5-16.7 22.4-24.5 32.6-32.5 70.5-58.1 112.7-75.9 43.6-18.4 90-27.8 137.9-27.8 47.9 0 94.3 9.3 137.9 27.8 42.2 17.8 80.1 43.4 112.7 75.9 32.6 32.5 58.1 70.4 76 112.5C865.7 417.8 875 464.1 875 512c0 47.9-9.4 94.2-27.8 137.8-17.8 42.1-43.4 80-76 112.5s-70.5 58.1-112.7 75.9A352.8 352.8 0 01520.6 866c-47.9 0-94.3-9.4-137.9-27.8A353.84 353.84 0 01270 762.3c-7.9-7.9-15.3-16.1-22.4-24.5-3-3.7-7.6-5.8-12.3-5.8H165c-6.3 0-10.2 7-6.7 12.3C234.9 863.2 368.5 942 520.6 942c236.2 0 428-190.1 430.4-425.6C953.4 277.1 761.3 82.6 521.7 82zM395.02 624v-76h-314c-4.4 0-8-3.6-8-8v-56c0-4.4 3.6-8 8-8h314v-76c0-6.7 7.8-10.5 13-6.3l141.9 112a8 8 0 010 12.6l-141.9 112c-5.2 4.1-13 .4-13-6.3z"
                          />
                        </svg>
                      </span>
                    </span>
                    <span
                      class="v-top"
                    >
                      0 papers
                    </span>
                  </span>
                </a>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DataItem renders with only needed props 1`] = `
<DocumentFragment>
  <div
    data-test-id="data-result-item"
  >
    <div
      class="__ContentBox__ h-100"
    >
      <div
        class="ant-card ant-card-bordered h-100"
      >
        <div
          class="ant-card-body"
        >
          <div
            class="pa2"
          >
            <div>
              <div
                data-test-id="data-result-item-inner"
              >
                <div
                  class="flex flex-nowrap"
                >
                  <div
                    class="flex-grow-1"
                  >
                    <a
                      class="result-item-title"
                      data-test-id="data-result-title-link"
                      href="/data/1234"
                    >
                      <span
                        data-test-id="literature-detail-title"
                      >
                        <span
                          class="__Latex__"
                        >
                          Test title
                        </span>
                        <span>
                          <span>
                             : 
                          </span>
                          <span
                            class="__Latex__"
                          >
                            voluptate eiusmod fugiat
                          </span>
                        </span>
                      </span>
                    </a>
                  </div>
                </div>
                <div
                  class="mt1"
                />
              </div>
            </div>
          </div>
          <div
            class="ant-row ant-row-space-between actions ph2"
          >
            <div
              class="ant-col"
            />
            <div
              class="ant-col"
            >
              <span
                class="__UserAction__"
              >
                <a
                  href="/literature?q=data.record.$ref:1234"
                >
                  <span
                    class="__IconText__"
                  >
                    <span
                      class="icon"
                    >
                      <span
                        aria-label="login"
                        class="anticon anticon-login"
                        role="img"
                      >
                        <svg
                          aria-hidden="true"
                          data-icon="login"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <defs>
                            <style />
                          </defs>
                          <path
                            d="M521.7 82c-152.5-.4-286.7 78.5-363.4 197.7-3.4 5.3.4 12.3 6.7 12.3h70.3c4.8 0 9.3-2.1 12.3-5.8 7-8.5 14.5-16.7 22.4-24.5 32.6-32.5 70.5-58.1 112.7-75.9 43.6-18.4 90-27.8 137.9-27.8 47.9 0 94.3 9.3 137.9 27.8 42.2 17.8 80.1 43.4 112.7 75.9 32.6 32.5 58.1 70.4 76 112.5C865.7 417.8 875 464.1 875 512c0 47.9-9.4 94.2-27.8 137.8-17.8 42.1-43.4 80-76 112.5s-70.5 58.1-112.7 75.9A352.8 352.8 0 01520.6 866c-47.9 0-94.3-9.4-137.9-27.8A353.84 353.84 0 01270 762.3c-7.9-7.9-15.3-16.1-22.4-24.5-3-3.7-7.6-5.8-12.3-5.8H165c-6.3 0-10.2 7-6.7 12.3C234.9 863.2 368.5 942 520.6 942c236.2 0 428-190.1 430.4-425.6C953.4 277.1 761.3 82.6 521.7 82zM395.02 624v-76h-314c-4.4 0-8-3.6-8-8v-56c0-4.4 3.6-8 8-8h314v-76c0-6.7 7.8-10.5 13-6.3l141.9 112a8 8 0 010 12.6l-141.9 112c-5.2 4.1-13 .4-13-6.3z"
                          />
                        </svg>
                      </span>
                    </span>
                    <span
                      class="v-top"
                    >
                      0 papers
                    </span>
                  </span>
                </a>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
